--- a/src/styles/base/_main.sass
+++ b/src/styles/base/_main.sass
@@ -11,8 +11,9 @@ html
 	font-size: 62.5%
 
 body
-	font-size: 1.8rem
-	font-weight: normal
+  font-size: 1.8rem
+  font-weight: normal
+  font-family: $font
 
 // align
 
