--- a/src/wrappers/Row/Row.sass
+++ b/src/wrappers/Row/Row.sass
@@ -1,4 +1,7 @@
 .row
-	display: flex
-	width: 100%
-	flex-flow: wrap
+  display: flex
+  width: 100%
+  flex-flow: wrap
+
+  &.rowCentered
+    text-align: center
