finish step one

--- a/src/components/organisms/Link/Link.sass
+++ b/src/components/organisms/Link/Link.sass
@@ -5,6 +5,7 @@
   display: flex
   flex-flow: column
   overflow: hidden
+  max-width: 94rem
 
   &.linkContainerCentered
     justify-content: center
