--- a/src/components/organisms/Header/Header.sass
+++ b/src/components/organisms/Header/Header.sass
@@ -1,2 +1,9 @@
 .header
-  height: 5rem
+  width: 100%
+  display: flex
+
+  .headerBorder
+    padding-top: 2rem
+    padding-bottom: 2rem
+    margin-bottom: 4rem
+    border-bottom: 1px solid #ECECEC
