--- a/src/components/organisms/Link/Link.sass
+++ b/src/components/organisms/Link/Link.sass
@@ -5,7 +5,7 @@
   display: flex
   flex-flow: column
   overflow: hidden
-  max-width: 94rem
+  max-width: 94rem !important
 
   &.linkContainerCentered
     justify-content: center
