--- a/src/components/atoms/Container/Container.sass
+++ b/src/components/atoms/Container/Container.sass
@@ -4,7 +4,7 @@
 	width: 100%
 
 	&.container960
-		max-width: 960px
+		max-width: 96rem
 
 	&.container1120
-		max-width: 1120px
+		max-width: 112rem
