--- a/src/components/molecules/FormLink/FormRead.sass
+++ b/src/components/molecules/FormLink/FormRead.sass
@@ -1,10 +1,8 @@
 .formRead
   width: 100%
-  margin-bottom: 1rem
+  margin-bottom: 2rem
   position: relative
   display: flex
-  justify-content: center
-  align-items: flex-end
 
   form
     width: 100%
@@ -12,10 +10,33 @@
     flex-flow: row
 
   input
-    padding: 1rem
+    padding: 0
     flex: 1
-    margin-right: 1rem
+    margin-right: 2rem
+    border-bottom: 1px solid #dcdcdc
+    border-top: 0
+    border-left: 0
+    border-right: 0
+    font-size: 3rem
+    color: #9b9b9b
+    &::placeholder
+      color: #9b9b9b
+      opacity: .5
 
   button
     flex: 1
-    max-width: 8rem
+    max-width: 18rem
+    color: #dcdcdc
+    font-size: 3rem
+    font-weight: 300
+    border: 1px solid #dcdcdc
+    transition: all .2s ease
+    cursor: pointer
+    &:hover
+      background: #dcdcdc
+      color: #fff
+
+    span
+      display: inline-block
+      font-size: 3rem
+      padding: 1.5rem
