--- a/src/components/molecules/FormLink/FormRead.sass
+++ b/src/components/molecules/FormLink/FormRead.sass
@@ -32,6 +32,7 @@
     border: 1px solid #dcdcdc
     transition: all .2s ease
     cursor: pointer
+    background: none
     &:hover
       background: #dcdcdc
       color: #fff
